--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  display: flex;
+}
+
+.App-container {
+  max-width: 1366px;
+  border: 2px dashed black;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App-logo {
@@ -14,7 +22,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
